--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=konkuk-class-CICD_team4
 sonar.organization=sma8-ase-2025-1
-
+sonar.host.url=https://sonarcloud.io
+sonar.cfamily.build-wrapper-output=build_wrapper_output_directory
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=team4
